# candy

./: .gitignore  Cargo.toml  README.md
candy-macros/: Cargo.toml
candy-macros/src/: lib.rs
candy-macros/tests/: test.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
pulse/: Cargo.toml  README.md
pulse/src/: lib.rs  pulse.rs
renderers/: Cargo.toml
renderers/src/: lib.rs  window.rs
renderers/src/bidimensional/: default_painter.rs  default_renderer.rs  default_renderer_gl.rs  default_renderer_vello.rs  default_renderer_vk.rs  mod.rs
renderers/src/primitives/: font.rs  image.rs  mod.rs  rule.rs  square.rs  text.rs
renderers/src/threedimensional/: default_renderer.rs  mod.rs
shaders/: triangle.wgsl
shared/: Cargo.toml
shared/src/: lib.rs  rect.rs
shared/src/threed/: mod.rs
shared/src/ui/: effect.rs  mod.rs  style.rs
src/: handler.rs  lib.rs  main.rs  window.rs
src/components/: button.rs  container.rs  image.rs  input.rs  mod.rs  scrollable.rs  solidbox.rs  text.rs  toggle.rs
src/elements/: draw_rule.rs  image.rs  mod.rs  square.rs  text.rs
src/helpers/: mod.rs  rect.rs
src/renderer/: candy.rs  mod.rs
src/renderer/threed/: candy3d.rs  mod.rs
src/renderer/threed/wgpu/: core.rs  mod.rs
src/renderer/twod/: candy2d.rs  mod.rs
src/renderer/twod/helpers/: mod.rs  opengl.rs
src/text/: font.rs  manager.rs  mod.rs
src/threed/: mod.rs
src/ui/: component.rs  mod.rs  tree.rs
src/ui/animation/: curves.rs  manager.rs  mod.rs  scheduler.rs
src/ui/layout/: error.rs  mod.rs
src/ui/styling/: mod.rs  style.rs
src/ui/styling/anim/: curves.rs  manager.rs  mod.rs
src/ui/styling/fx/: mod.rs  no_effect.rs  shadow.rs
src/ui/styling/layout/: mod.rs
src/ui/tree/: node.rs  tree.rs
