[package]
name = "candy"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lazy_static = "1.5.0"
nalgebra = "0.33.2"
skia-safe = { version = "0.90.0", features = [] }
winit = "0.30.11"
glutin = {version = "0.32.3"}

[dependencies]
flume = {version = "0.11.1", default-features=false}
candy_renderers = {path="./renderers"}
candy-shared-types = {path="./shared"}
nalgebra.workspace=true
winit.workspace=true
glutin.workspace=true
glutin-winit = {version = "0.5.0", optional=true}
lazy_static.workspace=true
skia-safe.workspace=true
wgpu-hal = { version = "27.0.4", features = ["gles"] }



[lib]
name = "candy"
path = "src/lib.rs"

[workspaces]
members = [
  ".",
  "renderers",
  "shared"
]

[features]
default = ["opengl"]
opengl = ["glutin-winit"]
