[package]
name = "candy_renderers"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra.workspace=true
skia-safe.workspace=true
winit.workspace=true
glutin.workspace=true
gl = {version = "0.14.0", optional=true}
ash = {version="0.38.0+1.3.281", optional=true}
vulkano= {version = "0.35.2", optional=true}
raw-window-handle = "0.6.2"
wgpu = "27.0.1"
candy-shared-types = {path="../shared"}
pollster = "0.4.0"
wgpu-hal = { version = "27.0.4", features = ["gles"] }

[features]
default = ["vulkan"]
opengl=["skia-safe/gl", "gl"]
vulkan=["skia-safe/vulkan", "vulkano", "ash"]
metal=["skia-safe/metal"]
directx=["skia-safe/d3d"]

[lib]
name = "candy_renderers"
path = "src/lib.rs"
